results should no longer overlap commands

--- a/src/P7-PSEngine/wwwroot/css/stylesheet.css
+++ b/src/P7-PSEngine/wwwroot/css/stylesheet.css
@@ -106,3 +106,11 @@ td {
     padding: 5px;
     border: 1px solid rgb(160 160 160);
 }
+
+.commandsCell {
+    z-index: 999;
+}
+
+.resultsCell {
+    z-index: -999;
+}
